@@ -886,8 +886,11 @@ HELPANDMANUAL_FILTER_NAME=Help & Manual Files
 # Typo3Filter.java
 TYPO3_FILTER_NAME=Typo3 LocManager Files
 
-# Typo3Filter.java
+# WixFilter.java
 WIX_FILTER_NAME=WiX Localization Files
+
+# SvgFilter.java
+SVG_FILTER_NAME=SVG Image Files
 
 # org.omegat.filters3.xml.Handler
 XML_FATAL_ERROR=Error in file {0}, line {1}
